--- a/exemplo.env
+++ b/exemplo.env
@@ -1,5 +1,5 @@
 # Variáveis de ambiente para o banco de dados
-DB_ROOT_PASSWORD=root_password
-DB_NAME=glpi
-DB_USER=glpi_user
-DB_PASSWORD=glpi_password
+DB_ROOT_PASSWORD=senharoot
+DB_NAME=seubanco
+DB_USER=seuusuarioglpi
+DB_PASSWORD=seubancoglpi
