--- a/glpi-compose.yml
+++ b/glpi-compose.yml
@@ -5,8 +5,10 @@ services:
     restart: "unless-stopped"
     volumes:
       - "./storage/glpi:/var/glpi:rw"
+    env_file: .env # Pass environment variables from .env file to the container
     depends_on:
-      - "db"
+      db:
+        condition: service_healthy
     ports:
       - "80:80"
 
@@ -16,9 +18,15 @@ services:
     volumes:
        - "./storage/mysql:/var/lib/mysql"
     environment:
-      MYSQL_ROOT_PASSWORD: "root"
-      MYSQL_DATABASE: "db_glpi"
-      MYSQL_USER: "glpi"
-      MYSQL_PASSWORD: "glpi"
-    ports:
-      - "35.223.212.9:3306"
+      MYSQL_RANDOM_ROOT_PASSWORD: "yes"
+      MYSQL_DATABASE: ${GLPI_DB_NAME}
+      MYSQL_USER: ${GLPI_DB_USER}
+      MYSQL_PASSWORD: ${GLPI_DB_PASSWORD}
+    healthcheck:
+      test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
+      start_period: 5s
+      interval: 5s
+      timeout: 5s
+      retries: 10
+    expose:
+      - "3306"
